added documentation for lab4

--- a/Lab_4/Makefile
+++ b/Lab_4/Makefile
@@ -1,3 +1,11 @@
+
+#
+#	Makefile
+#	Fidel Soto
+#	February 29, 2020
+#	Compiles the C, Lex, and Yacc files into one executiable (lab4)
+#
+
 all:
 	yacc -d lab4.y
 	lex lab4.l
