finalized lab6, added some premliminary files for labs 7 and 8

--- a/Lab_6/Makefile
+++ b/Lab_6/Makefile
@@ -2,7 +2,7 @@
 #
 #	Makefile
 #	Fidel Soto
-#	March 15, 2020
+#	March 21, 2020
 #	Compiles the C, Lex, and Yacc files into one executable (lab6)
 #
 
@@ -10,3 +10,8 @@ all:
 	yacc -d lab6.y
 	lex Lab6.l
 	gcc lex.yy.c y.tab.c ast.c -o lab6
+run: all
+	./lab6 < lab6test.al > lab6testoutput.txt
+	clear
+clean:
+	rm y.tab.c y.tab.h lex.yy.c lab6
