--- a/Lab_7/Makefile
+++ b/Lab_7/Makefile
@@ -2,8 +2,8 @@
 #
 #	Makefile
 #	Fidel Soto
-#	March 21, 2020
-#	Compiles the C, Lex, and Yacc files into one executable (lab6)
+#	April 13, 2020
+#	Compiles the C, Lex, and Yacc files into one executable (lab7)
 #
 
 all:
@@ -11,7 +11,7 @@ all:
 	lex lab7.l
 	gcc lex.yy.c y.tab.c ast.c symtable.c -o lab7
 run: all
-	./lab7 < lab6test.al > lab6testoutput.txt
 	clear
+	./lab7 < lab7test.al > lab7output.txt
 clean:
 	rm y.tab.c y.tab.h lex.yy.c lab7
