--- a/Lab_9/Makefile
+++ b/Lab_9/Makefile
@@ -8,7 +8,7 @@
 
 all:
 	yacc -d lab9.y
-	lex lab9.l
+	lex Lab9.l
 	gcc lex.yy.c y.tab.c ast.c symtable.c emit.c -o lab9
 clean:
 	rm y.tab.c y.tab.h lex.yy.c lab9
